ops/clusterip.yml
apiVersion: v1
kind: Service
metadata:
  name: k8s-proj-backend-clusterip-service
spec:
  selector:
    app: k8s-proj-backend
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: k8s-proj-frontend-clusterip-service
spec:
  selector:
    app: k8s-proj-frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
